// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generator should generate 1 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "amount": "%global.counter%",
              "mode": "SET",
              "stat": "$$0",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "1",
              "mode": "INCREMENT",
              "stat": "$$0",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$0%",
              "mode": "SET",
              "stat": "counter",
              "type": "CHANGE_GLOBAL_STAT",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "$$0",
      ],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate 2 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "joinCounter",
        "quitCounter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "amount": "%global.joinCounter%",
              "mode": "SET",
              "stat": "$$0",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "1",
              "mode": "INCREMENT",
              "stat": "$$0",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$0%",
              "mode": "SET",
              "stat": "joinCounter",
              "type": "CHANGE_GLOBAL_STAT",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
        {
          "actions": [
            {
              "amount": "%global.quitCounter%",
              "mode": "SET",
              "stat": "$$1",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "1",
              "mode": "INCREMENT",
              "stat": "$$1",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$1%",
              "mode": "SET",
              "stat": "quitCounter",
              "type": "CHANGE_GLOBAL_STAT",
            },
          ],
          "event": "QUIT",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "$$0",
        "$$1",
      ],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate 3 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "amount": "%global.counter%",
              "mode": "SET",
              "stat": "$$0",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "1",
              "mode": "INCREMENT",
              "stat": "$$0",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$0%",
              "mode": "SET",
              "stat": "$$1",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "2",
              "mode": "INCREMENT",
              "stat": "$$1",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$1%",
              "mode": "SET",
              "stat": "$$2",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "3",
              "mode": "INCREMENT",
              "stat": "$$2",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$2%",
              "mode": "SET",
              "stat": "$$3",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "4",
              "mode": "INCREMENT",
              "stat": "$$3",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$3%",
              "mode": "SET",
              "stat": "counter",
              "type": "CHANGE_GLOBAL_STAT",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "$$0",
        "$$1",
        "$$2",
        "$$3",
      ],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate 4 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "amount": "%global.counter%",
              "mode": "SET",
              "stat": "$$0",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "1",
              "mode": "INCREMENT",
              "stat": "$$0",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$0%",
              "mode": "SET",
              "stat": "$$1",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "-1",
              "mode": "INCREMENT",
              "stat": "$$1",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$1%",
              "mode": "SET",
              "stat": "$$2",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "4",
              "mode": "INCREMENT",
              "stat": "$$2",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$2%",
              "mode": "SET",
              "stat": "counter",
              "type": "CHANGE_GLOBAL_STAT",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "$$0",
        "$$1",
        "$$2",
      ],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate 5 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "amount": "%global.counter%",
              "mode": "SET",
              "stat": "$$0",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "2",
              "mode": "MULTIPLY",
              "stat": "$$0",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "3",
              "mode": "SET",
              "stat": "$$1",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$0%",
              "mode": "INCREMENT",
              "stat": "$$1",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$1%",
              "mode": "SET",
              "stat": "$$2",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "1",
              "mode": "DECREMENT",
              "stat": "$$2",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$2%",
              "mode": "SET",
              "stat": "$$3",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "4",
              "mode": "INCREMENT",
              "stat": "$$3",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$3%",
              "mode": "SET",
              "stat": "$$4",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "5",
              "mode": "INCREMENT",
              "stat": "$$4",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$4%",
              "mode": "SET",
              "stat": "counter",
              "type": "CHANGE_GLOBAL_STAT",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "$$0",
        "$$1",
        "$$2",
        "$$3",
        "$$4",
      ],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate 6 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "amount": "%global.counter%",
              "mode": "SET",
              "stat": "$$0",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "2",
              "mode": "MULTIPLY",
              "stat": "$$0",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "3",
              "mode": "SET",
              "stat": "$$1",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$0%",
              "mode": "INCREMENT",
              "stat": "$$1",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$1%",
              "mode": "SET",
              "stat": "$$2",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "1",
              "mode": "DECREMENT",
              "stat": "$$2",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$2%",
              "mode": "SET",
              "stat": "$$3",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "4",
              "mode": "INCREMENT",
              "stat": "$$3",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$3%",
              "mode": "SET",
              "stat": "$$4",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "5",
              "mode": "INCREMENT",
              "stat": "$$4",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$4%",
              "mode": "SET",
              "stat": "$x",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$x%",
              "mode": "SET",
              "stat": "$$5",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "2",
              "mode": "MULTIPLY",
              "stat": "$$5",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "1",
              "mode": "SET",
              "stat": "$$6",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$5%",
              "mode": "INCREMENT",
              "stat": "$$6",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$6%",
              "mode": "SET",
              "stat": "counter",
              "type": "CHANGE_GLOBAL_STAT",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "$x",
        "$$0",
        "$$1",
        "$$2",
        "$$3",
        "$$4",
        "$$5",
        "$$6",
      ],
    },
  ],
  "kind": "module",
}
`;

exports[`Generator should generate 7 1`] = `
{
  "houses": [
    {
      "globalStats": [
        "counter",
      ],
      "handlers": [
        {
          "actions": [
            {
              "amount": "1",
              "mode": "SET",
              "stat": "$x",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "0",
              "mode": "SET",
              "stat": "$y",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "1",
              "mode": "SET",
              "stat": "$$0",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$y%",
              "mode": "DECREMENT",
              "stat": "$$0",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$x%",
              "mode": "SET",
              "stat": "$$1",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$0%",
              "mode": "MULTIPLY",
              "stat": "$$1",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$1%",
              "mode": "SET",
              "stat": "$$2",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "0",
              "mode": "MULTIPLY",
              "stat": "$$2",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$2%",
              "mode": "SET",
              "stat": "$$3",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "1",
              "mode": "INCREMENT",
              "stat": "$$3",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$2%",
              "mode": "SET",
              "stat": "$$4",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "1",
              "mode": "MULTIPLY",
              "stat": "$$4",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "$$4",
              "mode": "DECREMENT",
              "stat": "$$3",
              "type": "CHANGE_PLAYER_STAT",
            },
            {
              "amount": "%player.$$3%",
              "mode": "SET",
              "stat": "$z",
              "type": "CHANGE_PLAYER_STAT",
            },
          ],
          "event": "JOIN",
          "kind": "handler",
        },
      ],
      "kind": "house",
      "name": "TestHouse",
      "playerStats": [
        "$x",
        "$y",
        "$z",
        "$$0",
        "$$1",
        "$$2",
        "$$3",
        "$$4",
      ],
    },
  ],
  "kind": "module",
}
`;
